# aimldl_codefixer

./: CLAUDE.md  README.md  documentation_codefixer_ai_en.md  dokumentacja_codefixer_ai_PL.md
app01_java_chat/: .env.example  CLAUDE.md  CONTRACT.md  README.md  docker-compose.yml
app01_java_chat/db/migrations/: 001_init.sql
app01_java_chat/frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
app01_java_chat/frontend/src/: App.tsx  main.tsx
app01_java_chat/frontend/src/api/: client.ts
app01_java_chat/frontend/src/components/: ExecutionResultCard.tsx  FailoverNotice.tsx  FinalFixCard.tsx  ReasoningPanel.tsx
app01_java_chat/gateway/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
app01_java_chat/gateway/src/: config.ts  server.ts
app01_java_chat/integration-bridge/: Dockerfile  README.md  pom.xml
app01_java_chat/orchestrator/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app01_java_chat/orchestrator/app/: bridge_client.py  config.py  db.py  graph.py  main.py  worker_client.py
app01_java_chat/orchestrator/app/agents/: reasoning_agent.py  router_agent.py
app01_java_chat/orchestrator/app/llm/: failover.py  openai_fallback_client.py  openrouter_client.py
app01_java_chat/orchestrator/tests/: conftest.py  test_graph.py
app01_java_chat/worker/: Dockerfile  README.md  conftest.py  requirements.txt
app01_java_chat/worker/app/: config.py  main.py  sandbox.py
app01_java_chat/worker/tests/: test_main.py  test_sandbox.py
(+21 files in other folders)
