[project]
name = "codefixer-orchestrator"
version = "0.1.0"
description = "CodeFixer AI — Python/FastAPI + LangGraph orchestrator (agent DAG: router -> reasoning -> execute -> self-correction loop -> finalize)"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.51.0",
    "langgraph==1.2.9",
    "langchain==1.3.13",
    "langchain-openai==1.3.5",
    "psycopg[binary,pool]==3.2.10",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
    "pydantic==2.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-httpx==0.36.2",
    "respx==0.23.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
